improve get last item of path